--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,24 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: ">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #1A1A1D !important;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">BatisPro</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <a class="navbar-brand text-light" href="#" style="">Batis Pro</a>
+    <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon text-light"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About us</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Equipments</a>
+          <a class="nav-link text-light" href="#">About us</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact us</a>
+          <a class="nav-link text-light" href="#">Equipments</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">Contact us</a>
         </li>
 
       </ul>
