--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,31 +1,31 @@
-<footer style="background-color:#6F2232;">
+<footer style="background-color:#45A29E;">
   <div class="container py-5">
     <div class="row d-flex justify-content-around mt-5 mx-auto" style="background: transparent">
       <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column text-dark text-center">
-        <p class="fw-bold text-light">Batis Pro</p>
-        <p class="text-light">We are committed to meeting all of your</p>
-        <p class="text-light">expectations and making your stay </p>
-        <p class="text-light mb-5">as comfortable as possible.</p>
+        <p class="fw-bold">Batis Pro</p>
+        <p class="">We are committed to meeting all of your</p>
+        <p class="">expectations and making your stay </p>
+        <p class=" mb-5">as comfortable as possible.</p>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column text-dark mt-5 text-center">
-        <p class="d-flex align-items-center justify-content-center text-light">
-          <i class='bx bx-map fs-5 mx-1 text-light'></i>
+        <p class="d-flex align-items-center justify-content-center ">
+          <i class='bx bx-map fs-5 mx-1 '></i>
           Boulevard Moulay Youssef,
         </p>
-        <p class="ms-4 text-light"> Youssoufia, Maroc</p>
+        <p class="ms-4 "> Youssoufia, Maroc</p>
       </div>
     </div>
     <hr class="pb-5 text-dark text-center">
     <div class="row d-flex align-items-center justify-content-between " style="background: transparent">
       <div class="col-lg-6 col-md-6 col-sm-12 text-center py-2">
-        <p class="text-light">© 2023 BATIS PRO - All rights reserved</p>
+        <p class="">© 2023 BATIS PRO - All rights reserved</p>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-nowrap justify-content-center">
-        <a href="#" style="color: white;"><i id="bx1" class='bx bxl-facebook fs-3 mx-2'></i></a>
-        <a href="#" style="color: white;"><i id="bx2" class='bx bxl-twitter fs-3 mx-2' ></i></a>
-        <a href="#" style="color: white;"><i id="bx3" class='bx bxl-instagram fs-3 mx-2' ></i></a>
-        <a href="#" style="color: white;"><i id="bx4" class='bx bxl-youtube fs-3 mx-2' ></i></a>
-        <a href="#" style="color: white;"><i id="bx5" class='bx bxl-whatsapp fs-3 mx-2' ></i></a>
+        <a href="#" style="color: black;"><i id="bx1" class='bx bxl-facebook fs-3 mx-2'></i></a>
+        <a href="#" style="color: black;"><i id="bx2" class='bx bxl-twitter fs-3 mx-2' ></i></a>
+        <a href="#" style="color: black;"><i id="bx3" class='bx bxl-instagram fs-3 mx-2' ></i></a>
+        <a href="#" style="color: black;"><i id="bx4" class='bx bxl-youtube fs-3 mx-2' ></i></a>
+        <a href="#" style="color: black;"><i id="bx5" class='bx bxl-whatsapp fs-3 mx-2' ></i></a>
       </div>
     </div>
   </div>
