--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,29 +1,29 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #1A1A1D !important;">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #0B0C10 !important;">
   <div class="container-fluid">
-    <a class="navbar-brand text-light" href="#" style="">Batis Pro</a>
-    <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon text-light"></span>
+    <a class="navbar-brand fw-bold me-3"  href="#" style="color: #C5C6C7">Batis Pro</a>
+    <button class="navbar-toggler" style="color: #C5C6C7" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon" style="color: #C5C6C7"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+          <a class="nav-link active fw-bold me-3" style="color: #C5C6C7" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">About us</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link text-light" href="#">Equipments</a>
+          <a class="nav-link fw-bold me-3" style="color: #C5C6C7" href="#">About us</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Contact us</a>
+          <a class="nav-link fw-bold me-3" style="color: #C5C6C7" href="#">Equipments</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link fw-bold me-3" style="color: #C5C6C7" href="#">Contact us</a>
         </li>
 
       </ul>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <button type="button" class="btn btn-outline-dark">Log in</button>
+        <button type="button" class="btn btn-outline-dark border-0 fw-bold px-4" style="background-color: #45A29E; color: #0B0C10">Sign In</button>
       </ul>
     </div>
   </div>
