--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,6 @@
   }
 
 </style>
-<app-navbar></app-navbar>
-<app-carousel></app-carousel>
-<app-equipments></app-equipments>
-
-
+<<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-
 <app-footer></app-footer>
