--- a/src/app/equipment-details/equipment-details.component.html
+++ b/src/app/equipment-details/equipment-details.component.html
@@ -1,1 +1,52 @@
-<p>equipment-details works!</p>
+<div class="container my-4">
+  <div class="row g-4 justify-content-center">
+    <div class="col-lg-12 d-flex flex-column">
+      <div class="room-details-head d-flex justify-content-between align-items-center rounded-2" style="position: relative;top:60px;width: 900px;z-index:1;background-color:#e9e9dcf2; padding:28px 57px; margin:auto auto;">
+        <div class="">
+          <h1 class="title fs-4 fw-bold"> Equipment name</h1>
+          <div class="d-flex justify-content-center flex-wrap gap-2 fs-6">
+            <span>Adults </span>
+            <span>Child</span>
+          </div>
+        </div>
+        <div class="">
+          <h1 class="text-base fs-4 fw-bold">price MAD</h1>
+          <span class="fs-6" style="text-align: center">/ Day</span>
+        </div>
+      </div>
+      <div class="room-detail-thumb mb-3" style="margin: auto auto;">
+        <img src="./assets/img/equipment1.jpg"  alt="" class="img-cover" style="max-width: 1000px;">
+      </div>
+      <div class="room-details-nav d-flex flex-wrap justify-content-between gap-3" style=" margin: 12px auto;">
+        <div style="">
+          <img src="" alt="" style="width: 200px; height:120px;" class="booking-img">
+        </div>
+      </div>
+      <div class="room-details cardd" style="margin-top:50px;">
+        <h5 class="title fs-5 fw-bold">Description</h5>
+        <hr>
+        <div class="body">
+          <p>
+            equipment details
+          </p>
+        </div>
+      </div>
+      <div class="room-details cardd " style="margin-top:50px;">
+        <h5 class="title fs-5 fw-bold">description</h5>
+        <hr>
+        <div class="body">
+          <div class="d-inline-flex flex-md-row flex-column gap-md-5 flex-wrap gap-3">
+            <span class="me-2">
+              <i class='bx bx-check-double' ></i>
+              weight
+            </span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="mx-auto d-flex align-items-center justify-content-center my-4">
+      <a href="" class="btn btn-outline-dark w-50 py-3 fw-bold" style="font-size: 20px"> Request Rental</a>
+    </div>
+</div>
+</div>
